--- a/angular-seed/app/view1/view1.html
+++ b/angular-seed/app/view1/view1.html
@@ -1,5 +1,5 @@
 <div class="page-header" ng-controller="View1Ctrl">
-  <h1 class="map-title">Violence Map</h1>
+  <h1 class="map-title">Crime Map</h1>
   <br>
   <div class="middle">
     <ui-gmap-google-map id="map" center='map.center' zoom='map.zoom'>
